--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>M.a.g.u.s. Kaland - Graligan</title>
+  <title>Fantasy Map - Manager</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <!-- Leaflet -->
