Add help, tune styles

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         <a class="nav-link" id="pills-characters-tab" data-toggle="pill" href="#pills-characters" role="tab" aria-controls="pills-characters"
           aria-selected="false">Characters</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pills-help-tab" data-toggle="pill" href="#pills-help" role="tab" aria-controls="pills-help"
+          aria-selected="false">?</a>
+      </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane fade show active" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
@@ -46,6 +50,9 @@
       <div class="tab-pane fade" id="pills-characters" role="tabpanel" aria-labelledby="pills-characters-tab">
           Stay tuned...
       </div>
+      <div class="tab-pane fade" id="pills-help" role="tabpanel" aria-labelledby="pills-help-tab">
+        <div id="help"></div>
+      </div>      
     </div>
 
   </div>
