--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,10 @@
         <a class="nav-link" id="pills-help-tab" data-toggle="pill" href="#pills-help" role="tab" aria-controls="pills-help"
           aria-selected="false">?</a>
       </li>
+      <li class="nav-item">
+
+        <a class="btn btn-info" id="pills-together-tab" onclick="TogetherJS(this); return false;" href="#pills-together" role="tab">Collaborate!</a>
+      </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane fade show active" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
@@ -56,6 +60,7 @@
     </div>
 
   </div>
+  <script src="https://togetherjs.com/togetherjs-min.js"></script>
 <!-- Jquery -->  
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
