--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,6 @@
           aria-selected="false">?</a>
       </li>
       <li class="nav-item">
-
         <a class="btn btn-info" id="pills-together-tab" onclick="TogetherJS(this); return false;" href="#pills-together" role="tab">Collaborate!</a>
       </li>
     </ul>
@@ -60,6 +59,9 @@
     </div>
 
   </div>
+  <script>
+  var TogetherJSConfig_cloneClicks = true
+  </script>
   <script src="https://togetherjs.com/togetherjs-min.js"></script>
 <!-- Jquery -->  
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
