--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mouse0270-bootstrap-notify/3.1.7/bootstrap-notify.min.js"></script>
 <!-- SimpleMde -->
   <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script> 
   <script src="https://cdn.rawgit.com/Rovak/InlineAttachment/master/dist/inline-attachment.min.js"></script> 
